Managed to get api information down to the first index of the api.  There is too much duplicate information away from the index.  I believe I may need keys set up.  I'm trying to use dot notation to get my vocabulary div info moved to the JSX so that I can use CSS to do at least one card that flips and looks good.  Will get at it tomorrow, hoping to get instructor help.

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,10 @@
     transform: rotate(360deg);
   }
 }
+.flash {
+  background-color: green;
+  width: 300px;
+  height: 300px;
+  border: 5px rgb(44, 3, 3);
+  perspective: 1000px;
+}
