--- a/src/App.css
+++ b/src/App.css
@@ -37,34 +37,47 @@
   }
 }*/
 .Flash {
-  background-color: green;
+  /*background-color: green;*/
   width: 20%;
   height: 20vh;
-  border: 100px rgb(44, 3, 3);
-  perspective: 1000px;
-  display: flex;
+  /*border: 100px rgb(44, 3, 3);*/
+  /*perspective: 1000px;*/
+  /*display: flex;*/
   justify-content: center;
   align-items: center;
+/*  position: relative;*/
+}
+.Flip {
+  width: 200px;
+  height: 300px;
+
+
 }
 .Flop {
   position: relative;
   width: 100%;
   height: 100%;
-  text-align: center;
-  transform: 1.5s;
+  /*text-align: center;*/
+  transition: transform 1.5s;
   transform-style: preserve-3d;
+  left: 600px;
+
+
 }
 .Flash:hover .Flop {
   transform: rotateY(180deg);
 }
 .Front, .Back {
   position: absolute;
+/*  left: 50%;*/
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+  border-radius: 5px;
 
 }
 .Front {
@@ -76,4 +89,10 @@
   background-color: dodgerblue;
   color: black;
   transform: rotateY(180deg);
+}
+
+.ChangeCollections {
+  background-color: black;
+  left: 0px;
+  position: absolute;
 }
