Figured out the counting and moving collection count forward/backward.  Was not able to count all of the cards.  Everything was done on buttons and there must be a better way.  I used CSS and played with some of the options that I know.  Was able to seperate the inputs at the top and the count tool from being bunched.  This project was the first that I delved into CSS with a little more than slight detail.  Look forward to learning more.

--- a/src/components/comp.css
+++ b/src/components/comp.css
@@ -3,7 +3,7 @@
     height: 50px;
     right: 0px;
     bottom: 0px;
-
+    margin: 20px 20px 20px 20px;
 }
 .Tab {
     width: 50px;
@@ -11,4 +11,19 @@
     right: 0px;
     bottom: 0px;
 
+
+}
+.Trial {
+    margin: 20px 20px 20px 20px;
+}
+.WordText {
+    margin: 20px 20px 20px 20px;
+    left: 50px;
+    display: absolute;
+
+}
+.DefinitionText {
+    margin: 20px 20px 20px 20px;
+    left: 50px;
+    display: absolute;
 }
