--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,4 @@
-/*.Flash {
-  text-align: center;
-}*/
 
-/*.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}*/
 .Flash {
   /*background-color: green;*/
   width: 20%;
@@ -102,4 +65,13 @@
  height: 50px;
  right: 50%;
  bottom: 20%;
+}
+.Trial {
+  left: 400px;
+}
+input [type=text] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
 }
